[package]
name = "s1_hello_solana"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
borsh = "1.5.1"
borsh-derive = "1.5.1"
solana-program = "2.0.8"
solana-program-test = "2.0.8"
protoc = "2.28.0"
solana-sdk = "2.0.8"

[lib]
name = "s1_hello_solana"
crate-type = ["cdylib", "lib"]