[package]
name = "s5_transfer_sol"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = "0.9.3"
borsh-derive = "0.9.1"
solana-program = "1.11.1"

[features]
test-bpf = []

[dev-dependencies]
solana-logger = "1.11.1"
solana-program-test = "1.11.1"
solana-sdk = "1.11.1"
solana-validator = "1.11.1"

[lib]
name = "s5_transfer_sol"
crate-type = ["cdylib", "lib"]